# JK2DemoCutter

./: .gitmodules  CMakeLists.txt  DemoCutter.sln  Notes_Dev_Help.md  TODO.txt  analyzeParallel.sh  demoSmoothen_dragdrop.bat  extractParallel.sh  optimizeDemos.sh
.github/workflows/: build.yml
DemoCombiner/: CMakeLists.txt  DemoCombine.cpp  DemoCombiner.vcxproj  DemoCombiner.vcxproj.filters
DemoCompressor/: CMakeLists.txt  DemoCompressor.cpp  DemoCompressor.vcxproj  DemoCompressor.vcxproj.filters
DemoCutter/: CMakeLists.txt  DemoCutter.vcxproj  DemoCutter.vcxproj.filters  README.md  anims.h  animsStanceMappings.h  common.cpp  demoCut.cpp  demoCut.h  files.cpp  huffman.cpp  jkaStuff.h  msg.cpp
DemoDefragCombiner/: CMakeLists.txt  DemoDefragCombine.cpp  DemoDefragCombiner.vcxproj  DemoDefragCombiner.vcxproj.filters  DemoReader.cpp  DemoReader.h
DemoHighlightFinder/: CMakeLists.txt  DemoHighlightFinder.filters  DemoHighlightFinder.vcxproj  DemoHighlightFinder.vcxproj.filters  README.md  debugStatsDb.db  demoHighlightFind.cpp  killDatabase.db
DemoHighlightFinder/lib/deb64/: pcre2-8-staticd.lib
DemoHighlightFinder/lib/deb86/: pcre2-posix-staticd.lib
DemoHighlightFinder/lib/rel64/: pcre2-8-static.lib  pcre2-posix-static.lib
DemoHighlightFinder/lib/rel86/: pcre2-8-static.lib
DemoMerger/: CMakeLists.txt  DemoMerge.cpp  DemoMerger.vcxproj  DemoMerger.vcxproj.filters
DemoOptimizer/: CMakeLists.txt  DemoOptimizer.vcxproj  DemoOptimizer.vcxproj.filters  demoOptimize.cpp
DemoReframer/: CMakeLists.txt  DemoReframer.cpp  DemoReframer.vcxproj  DemoReframer.vcxproj.filters  LICENSE.txt  README.md
shared/: AngleCoder.h  CModel.cpp  CModel.h  DemoReader.cpp  DemoReader.h  DemoReaderBase.cpp  DemoReaderBase.h  DemoReaderLight.cpp  DemoReaderLight.h  PMove.cpp  PMove.h  SQLDelayer.h  ValuesHelper.cpp  ValuesHelper.h  animMappingTable.c  animMappingTable.cpp  boostTupleHash.hpp  files_lzma.hpp  jk2spStuff.h  otherGameStuff.h  otherGameStuff2.h  polytools.h  sqlite_tabledefs.h  stateFields.h
shared/base58/: base58.cpp
shared/blit-fonts/: blit16.h  blit32.h
shared/fp16/fp16/: fp16.h
shared/include/: jpcre2.hpp  named_mutex.hpp
shared/lib/deb64/: pcre2-posix-staticd.lib
shared/lib/deb86/: pcre2-8-staticd.lib
shared/lib/rel86/: pcre2-posix-static.lib
shared/libgmavi/: LICENSE  aviStruct.h  libgmavi.c  libgmavi.h  msaviriff.h
shared/pocketlzma/: lzma_helper.hpp
shared/sabers/: sabers.cpp  sabers.h
shared/small3dlib/: small3dlib.h
shared/sqlite/: sqlite3.h
various_files/SQL queries/: get_demos_overview.sql
various_files/mini tools/: hexcolor_allchars_echo.c  hexcolor_allchars_echo.cfg
various_files/mini tools/random benchmarks and tests/: stringcompare-ends.cpp  stringcompare.cpp
